--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -3,3 +3,8 @@ RUN dnf install nginx -y
 LABEL project="expense" \
       environment="dev" \
       Component="frontend"
+
+
+#docker images -f "LABEL=project=expense"
+#docker inspect label:1.0.0
+
