--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,7 @@
 FROM almalinux:9
 ENV Fruit="mango" \
     Season="summer"
-RUN echo "summer special ${Fruit} shake" > /tmp/fruits.txt
+# here user1 is key and someuser is default value
+ARG ${fruitsale:-some_user}
+RUN echo "summer special ${fruitsale} shake" > /tmp/fruits.txt
 CMD ["sleep" ,"100"]
