--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,7 +1,7 @@
 FROM almalinux:9
 ENV Fruit="mango" \
     Season="summer"
-# here user1 is key and someuser is default value
+ARG USERNAME = magoshake
 ARG ${username:-some_user}
 RUN echo "Hello user : ${username}" 
 CMD ["sleep" ,"1000"]
