--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,7 +1,7 @@
 FROM almalinux:9
 ENV Fruit="mango" \
     Season="summer"
-ARG USERNAME = magoshake
+ARG USERNAME=mangoshake
 ARG ${username:-some_user}
-RUN echo "Hello user : ${username}" 
+RUN echo "Hello user : ${USERNAME}" 
 CMD ["sleep" ,"1000"]
