--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -1,3 +1,7 @@
 FROM almalinux:9
 ENV Fruit="mango" \
     Season="summer"
+
+#docker build -t env:1.0.0 .
+#docker run -d env:1.0.0. sleep 100
+#docker exec -it imageid bash
